--- a/tech_headset.html
+++ b/tech_headset.html
@@ -190,7 +190,7 @@
             <div class="row">
                 <div class="col-sm-3">
                     <div class="left-sidebar">
-                        <h2>Category</h2>
+                        <h1>Category</h1>
                         <div class="panel-group category-products" id="accordian">
                             <!--category-products-->
 
@@ -366,7 +366,7 @@
                 <div class="col-sm-9 padding-right">
                     <div class="features_items">
                         <!--features_items-->
-                        <h2 class="title text-center">Best Ratings</h2>
+                        <h1 class="title text-center">Best Ratings</h1>
 
 
                         <div class="row">
@@ -412,7 +412,7 @@
                                 <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07MZQ5F8S&asins=B07MZQ5F8S&linkId=1f9ccfd3fca01a2725f8130523771acb&show_border=true&link_opens_in_new_window=true"></iframe>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
-                              <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07HH223KV&asins=B07HH223KV&linkId=a028817f34145c658ff41b6fcb803817&show_border=true&link_opens_in_new_window=true"></iframe>
+                              <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07Hh123KV&asins=B07Hh123KV&linkId=a028817f34145c658ff41b6fcb803817&show_border=true&link_opens_in_new_window=true"></iframe>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
                                  <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KXR889N&asins=B07KXR889N&linkId=57f996960c499da0fb71ebd37f72b43b&show_border=true&link_opens_in_new_window=true"></iframe>
@@ -441,7 +441,7 @@
     <!-- recommended items start -->
     <div class="recommended_items">
         <!--recommended_items-->
-        <h2 class="title text-center">Recommended items </h2>
+        <h1 class="title text-center">Recommended items </h1>
 
 
         <!-- Swiper -->
@@ -530,7 +530,7 @@
                 <div class="row">
                     <div class="col-sm-3">
                         <div class="companyinfo">
-                            <h2><strong>Hunt-Online</strong></h2>
+                            <h1><strong>Hunt-Online</strong></h1>
                             <p>Our aim is to provide great offers and huge discounts from <a
                                     href="https://www.amazon.com/" class="footer-amazon">Amazon</a> so that no deals
                                 will be missed.</p>
@@ -538,24 +538,24 @@
                     </div>
                     <div class="col-sm-3">
                         <div class="aboutinfo">
-                            <h2><a href="./about section/index.html" target="_blank">About Us</a> </h2>
-                            </h2>
-                            <h2><a href="./ContactFrom/contact.html" target="_blank">Contact Us</a> </h2>
-                            </h2>
+                            <h1><a href="./about section/index.html" target="_blank">About Us</a> </h1>
+                            </h1>
+                            <h1><a href="./ContactFrom/contact.html" target="_blank">Contact Us</a> </h1>
+                            </h1>
                         </div>
                     </div>
                     <div class="col-sm-3">
                         <div class="aboutinfos">
-                            <h2><a href="./TermsAndConditions/terms.html" target="_blank">Terms and Conditions</a> </h2>
-                            </h2>
-                            <h2><a href="privacy.html" target="_blank">Privacy Policy</a> </h2>
-                            </h2>
+                            <h1><a href="./TermsAndConditions/terms.html" target="_blank">Terms and Conditions</a> </h1>
+                            </h1>
+                            <h1><a href="privacy.html" target="_blank">Privacy Policy</a> </h1>
+                            </h1>
                         </div>
                     </div>
                     <div class="col-sm-3">
 
                         <div class="social-links">
-                            <h2>Connect with us</h2>
+                            <h1>Connect with us</h1>
 
                             <a href="https://www.facebook.com/profile.php?id=100054008048504" target="_blank">Facebook
                             </a>
