--- a/makeup_eyes.html
+++ b/makeup_eyes.html
@@ -189,7 +189,7 @@
 			<div class="row">
 				<div class="col-sm-3">
 					<div class="left-sidebar">
-						<h2>Category</h2>
+						<h1>Category</h1>
 						<div class="panel-group category-products" id="accordian">
 							<!--category-products-->
 
@@ -359,7 +359,7 @@
 
 						<!-- <div class="brands_products">
 						
-							<h2>Brands</h2>
+							<h1>Brands</h1>
 							<div class="brands-name">
 								<ul class="nav nav-pills nav-stacked">
 									<li><a href="#"> <span class="pull-right">(50)</span>Acne</a></li>
@@ -376,7 +376,7 @@
 
 						<!-- <div class="price-range">
 							
-							<h2>Price Range</h2>
+							<h1>Price Range</h1>
 							<div class="well text-center">
 								<input type="text" class="span2" value="" data-slider-min="0" data-slider-max="600"
 									data-slider-step="5" data-slider-value="[250,450]" id="sl2"><br />
@@ -397,7 +397,7 @@
 				<div class="col-sm-9 padding-right">
 					<div class="features_items">
 						<!--features_items-->
-						<h2 class="title text-center">Best Ratings</h2>
+						<h1 class="title text-center">Best Ratings</h1>
 
 
 						<div class="row">
@@ -488,7 +488,7 @@
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
 								<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
 									scrolling="no" frameborder="0"
-									src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B008KH2VU2&asins=B008KH2VU2&linkId=978b057cc3702f699132c5545849a119&show_border=true&link_opens_in_new_window=true"></iframe>
+									src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B008Kh1VU2&asins=B008Kh1VU2&linkId=978b057cc3702f699132c5545849a119&show_border=true&link_opens_in_new_window=true"></iframe>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
 								<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
@@ -498,7 +498,7 @@
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
 								<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
 									scrolling="no" frameborder="0"
-									src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B008KH2VU2&asins=B008KH2VU2&linkId=ab01472b1298b4d5f463a63733d99550&show_border=true&link_opens_in_new_window=true"></iframe>
+									src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B008Kh1VU2&asins=B008Kh1VU2&linkId=ab01472b1298b4d5f463a63733d99550&show_border=true&link_opens_in_new_window=true"></iframe>
 							</div>
 
 
@@ -549,7 +549,7 @@
 	</section>
 	<div class="recommended_items">
 		<!--recommended_items-->
-		<h2 class="title text-center">Recommended items </h2>
+		<h1 class="title text-center">Recommended items </h1>
 
 		<!-- Swiper -->
 		<div class="swiper-container">
@@ -559,7 +559,7 @@
 						<div class="single-products">
 							<div class="productinfo text-center">
 								<img src="images/home/recommend3.jpg" alt="" />
-								<h2> &#x20B9;426 <strike>&#x20B9; 1499</strike></h2>
+								<h1> &#x20B9;426 <strike>&#x20B9; 1499</strike></h1>
 								<p>Easy Polo Black Edition</p>
 
 							</div>
@@ -572,7 +572,7 @@
 						<div class="single-products">
 							<div class="productinfo text-center">
 								<img src="images/home/recommend3.jpg" alt="" />
-								<h2> &#x20B9;426 <strike>&#x20B9; 1499</strike></h2>
+								<h1> &#x20B9;426 <strike>&#x20B9; 1499</strike></h1>
 								<p>Easy Polo Black Edition</p>
 
 							</div>
@@ -585,7 +585,7 @@
 						<div class="single-products">
 							<div class="productinfo text-center">
 								<img src="images/home/recommend3.jpg" alt="" />
-								<h2> &#x20B9;426 <strike>&#x20B9; 1499</strike></h2>
+								<h1> &#x20B9;426 <strike>&#x20B9; 1499</strike></h1>
 								<p>Easy Polo Black Edition</p>
 
 							</div>
@@ -598,7 +598,7 @@
 						<div class="single-products">
 							<div class="productinfo text-center">
 								<img src="images/home/recommend3.jpg" alt="" />
-								<h2> &#x20B9;426 <strike>&#x20B9; 1499</strike></h2>
+								<h1> &#x20B9;426 <strike>&#x20B9; 1499</strike></h1>
 								<p>Easy Polo Black Edition</p>
 
 							</div>
@@ -611,7 +611,7 @@
 						<div class="single-products">
 							<div class="productinfo text-center">
 								<img src="images/home/recommend3.jpg" alt="" />
-								<h2> &#x20B9;426 <strike>&#x20B9; 1499</strike></h2>
+								<h1> &#x20B9;426 <strike>&#x20B9; 1499</strike></h1>
 								<p>Easy Polo Black Edition</p>
 
 							</div>
@@ -625,7 +625,7 @@
 						<div class="single-products">
 							<div class="productinfo text-center">
 								<img src="images/home/recommend3.jpg" alt="" />
-								<h2> &#x20B9;426 <strike>&#x20B9; 1499</strike></h2>
+								<h1> &#x20B9;426 <strike>&#x20B9; 1499</strike></h1>
 								<p>Easy Polo Black Edition</p>
 
 							</div>
@@ -638,7 +638,7 @@
 						<div class="single-products">
 							<div class="productinfo text-center">
 								<img src="images/home/recommend3.jpg" alt="" />
-								<h2> &#x20B9;426 <strike>&#x20B9; 1499</strike></h2>
+								<h1> &#x20B9;426 <strike>&#x20B9; 1499</strike></h1>
 								<p>Easy Polo Black Edition</p>
 
 							</div>
@@ -651,7 +651,7 @@
 						<div class="single-products">
 							<div class="productinfo text-center">
 								<img src="images/home/recommend3.jpg" alt="" />
-								<h2> &#x20B9;426 <strike>&#x20B9; 1499</strike></h2>
+								<h1> &#x20B9;426 <strike>&#x20B9; 1499</strike></h1>
 								<p>Easy Polo Black Edition</p>
 
 							</div>
@@ -664,7 +664,7 @@
 						<div class="single-products">
 							<div class="productinfo text-center">
 								<img src="images/home/recommend3.jpg" alt="" />
-								<h2> &#x20B9;426 <strike>&#x20B9; 1499</strike></h2>
+								<h1> &#x20B9;426 <strike>&#x20B9; 1499</strike></h1>
 								<p>Easy Polo Black Edition</p>
 
 							</div>
@@ -691,7 +691,7 @@
 				<div class="row">
 					<div class="col-sm-3">
 						<div class="companyinfo">
-							<h2><strong>Hunt-Online</strong></h2>
+							<h1><strong>Hunt-Online</strong></h1>
 							<p>Our aim is to provide great offers and huge discounts from <a
 									href="https://www.amazon.com/" class="footer-amazon">Amazon</a> so that no deals
 								will be missed.</p>
@@ -699,24 +699,24 @@
 					</div>
 					<div class="col-sm-3">
 						<div class="aboutinfo">
-							<h2><a href="./about section/index.html" target="_blank">About Us</a> </h2>
-							</h2>
-							<h2><a href="./ContactFrom/contact.html" target="_blank">Contact Us</a> </h2>
-							</h2>
+							<h1><a href="./about section/index.html" target="_blank">About Us</a> </h1>
+							</h1>
+							<h1><a href="./ContactFrom/contact.html" target="_blank">Contact Us</a> </h1>
+							</h1>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="aboutinfos">
-							<h2><a href="./TermsAndConditions/terms.html" target="_blank">Terms and Conditions</a> </h2>
-							</h2>
-							<h2><a href="privacy.html" target="_blank">Privacy Policy</a> </h2>
-							</h2>
+							<h1><a href="./TermsAndConditions/terms.html" target="_blank">Terms and Conditions</a> </h1>
+							</h1>
+							<h1><a href="privacy.html" target="_blank">Privacy Policy</a> </h1>
+							</h1>
 						</div>
 					</div>
 					<div class="col-sm-3">
 
 						<div class="social-links">
-							<h2>Connect with us</h2>
+							<h1>Connect with us</h1>
 
 							<a href="https://www.facebook.com/profile.php?id=100054008048504" target="_blank">Facebook
 							</a>
